# cr4sh_

./: Cargo.toml  README.md  b  out  output.txt
src/: cd.rs  history.rs  main.rs  shellname.rs  tokenizer.rs  touch.rs
src/customs/: cd.rs  history.rs  mod.rs  source.rs  touch.rs
