[package]
name = "bexx-shredder"
version = "0.1.0"
authors = ["Bexx Modebadze <bexxmodd@seas.upenn.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signal-hook = '0.3.8'
ctrlc = '3.1.9'
nix = '0.20.0'
crossbeam-channel = "0.5"
anyhow = "1.0"
log = "0.4"

