[package]
name = "ghost-inz-shell"
version = "0.0.1"
authors = ["Bexx Modebadze <bexxmodd@seas.upenn.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signal-hook = '0.3.8'
ctrlc = '3.1.9'
nix = '0.20.0'
crossbeam-channel = "0.5"
anyhow = "1.0"
log = "0.4"
users = "0.11"
sysinfo = "0.17"
dirs = "3.0"
chrono = "0.4"

